Fri Nov 26 15:59:02 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/String.cc(write): added Alexis Mikhailov's fix to bump up
	pointer after writing a block.
	* htsearch/Display.cc(setVariables): added Alexis Mikhailov's fix
	to check the number of pages against maximum_pages at the right time.
	(Put it even earlier, to make sure nPages is at least 1.)

Wed Nov 24 20:33:13 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* installdir/htdig.conf: Add bad_extensions to make it
	more obvious to users how to exclude certain document types.
	Fix the comments for search_algorithm to refer to all the current
	possibilities.	Add example of no_excerpt_show_top attribute in
	line with most user's expectations.  (Geoff's changes)

Wed Nov 24 20:02:32 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* installdir/search.html (Match): Add Boolean to default search
	form, as suggested by PR#561.

Tue Nov 23 23:03:45 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc(setupTemplates), htsearch/Display.h: fixed a
	couple of compilation errors in template_patterns code.

Tue Nov 23 22:16:31 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Retriever.cc(got_href): Applied Patrick's case insensitive
	server fix, to lowercase all URLs if case_sensitive is false.

Tue Nov 23 22:08:22 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/StringList.cc(Join): Applied Loic's patch to fix memory leak.

Tue Nov 23 21:52:18 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	[Applied patch from Hanno Mueller <kontakt@hanno.de>, which includes...]
	* contrib/README: Add scriptname directory.
	* contrib/scriptname/*: An example of using htsearch within
	dynamic SSI pages
	* htcommon/defaults.cc: Add script_name attribute to override
	SCRIPT_NAME CGI environment variable.
	* htdoc/FAQ.html: Update question 4.7 based on including htsearch
	as a CGI in SSI markup.